z-index fix

--- a/src/Components/PlayerInfo/style.css
+++ b/src/Components/PlayerInfo/style.css
@@ -52,7 +52,7 @@ body {
   height: 350px;
   padding: 15px;
   border-radius: 300px;
-  z-index: 1000;
+  z-index: 100;
   overflow: hidden;
   background: rgb(255, 202, 89);
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
